# cmake-project-template

./: CMakeLists.txt
test/: CMakeLists.txt
